completed construction of functions to build html file. edited html templates.

--- a/template/main.html
+++ b/template/main.html
@@ -13,55 +13,27 @@
         <h1 class="display-4 text-center" style="font-weight:bolder;">My Team</h1>
     </div>
 
-    <div class="container">
-
-        <div class="row">
-            <!--Engineer-->
-            <div class="col-sm-4">
-                <div class="profile-box">
-                    <div class="profile-header">
-                        <div class="header-section">Name: </div>
-                        <div class="header-section">Engineer</div>
-                    </div>
-                    <div class="profile-body">
-                        <p class="profile-content">Id: </p>
-                        <p class="profile-content">Email: </p>
-                        <p class="profile-content">GitHub: </p>
-                    </div>
-                </div>
-            </div>
-            <!--Intern-->
-            <div class="col-sm-4">
-                <div class="profile-box">
-                    <div class="profile-header">
-                        <div class="header-section">Name: </div>
-                        <div class="header-section">Intern</div>
-                    </div>
-                    <div class="profile-body">
-                        <p class="profile-content">Id: </p>
-                        <p class="profile-content">Email: </p>
-                        <p class="profile-content">GitHub: </p>
-                    </div>
-                </div>
-            </div>
-            <!--Manager-->
-            <div class="col-sm-4">
-                <div class="profile-box">
-                    <div class="profile-header">
-                        <div class="header-section">Name: </div>
-                        <div class="header-section">Manager</div>
-                    </div>
-                    <div class="profile-body">
-                        <p class="profile-content">Id: </p>
-                        <p class="profile-content">Email: </p>
-                        <p class="profile-content">Office Number: </p>
-                    </div>
-                </div>
-            </div>
+    <div class="card" style="width: 18rem; float:left; margin:10px;">
+        <div class="card-img-top"></div>
+        <div class="card-body">
+          <h5 class="card-title header-card">Name</h5>
+          <h5 class="card-title header-card">Position</h5>
+          <p class="card-text header-body">ID</p>
+          <p class="card-text header-body">EMAIL</p>
+          <p class="card-text header-body">GITHUB</p>
         </div>
+      </div>
 
-
-    </div>
+      <div class="card" style="width: 18rem; float:left; margin:10px;">
+        <div class="card-img-top"></div>
+        <div class="card-body">
+          <h5 class="card-title header-card">Name</h5>
+          <h5 class="card-title header-card">Position</h5>
+          <p class="card-text header-body">ID</p>
+          <p class="card-text header-body">EMAIL</p>
+          <p class="card-text header-body">GITHUB</p>
+        </div>
+      </div>
       
 </body>
 </html>
