app now properly writes to output.html

--- a/template/main.html
+++ b/template/main.html
@@ -27,11 +27,11 @@
       <div class="card" style="width: 18rem; float:left; margin:10px;">
         <div class="card-img-top"></div>
         <div class="card-body">
-          <h5 class="card-title header-card">Name</h5>
-          <h5 class="card-title header-card">Position</h5>
-          <p class="card-text header-body">ID</p>
-          <p class="card-text header-body">EMAIL</p>
-          <p class="card-text header-body">GITHUB</p>
+          <h5 class="card-title header-card">${this.name}</h5>
+          <h5 class="card-title header-card">${this.role}</h5>
+          <p class="card-text header-body">${this.id}</p>
+          <p class="card-text header-body">${this.email}</p>
+          <p class="card-text header-body">${this.school}</p>
         </div>
       </div>
       
